# cli

./: Cargo.toml  LICENSE  README.md  publisher.toml
.github/workflows/: release.yml
src/: dev.rs  error.rs  main.rs
