[package]
name    = "automa-cli"
version = "0.0.1"

authors     = ["Automa <engineering@automa.app>"]
description = "CLI for Automa"
homepage    = "https://github.com/automa/cli"
repository  = "https://github.com/automa/cli"

edition      = "2021"
rust-version = "1.75.0"

categories = ["command-line-utilities"]
license    = "MIT"
readme     = "README.md"

[dependencies]
anstream            = "0.6.4"
clap                = { version = "4.4.7", features = ["derive", "wrap_help"] }
clap-verbosity-flag = "2.1.0"
colorchoice-clap    = "1.0.3"
owo-colors          = "3.5.0"
proc-exit           = "2.0.1"
thiserror           = "1.0.39"
tracing             = "0.1.37"
tracing-log         = { version = "0.1.3", default-features = false, features = ["log-tracer", "std"] }
tracing-subscriber  = "0.3.16"

[[bin]]
name = "automa"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto           = "thin"
strip         = true

[profile.release-opt-size]
inherits  = "release"
lto       = true
opt-level = "z"
panic     = "abort"

[workspace.metadata.workspaces]
no_individual_tags = true
